--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
+          distribution: 'liberica'
           java-version: '17'
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4
@@ -60,7 +60,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
+          distribution: 'liberica'
           java-version: '17'
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4
@@ -122,7 +122,7 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'
+          distribution: 'liberica'
           java-version: 17
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4
