--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
     needs: [bumpversion]
     steps:
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'liberica'
           java-version: '17'
@@ -58,7 +58,7 @@ jobs:
     needs: [bumpversion]
     steps:
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'liberica'
           java-version: '17'
@@ -120,10 +120,10 @@ jobs:
     needs: [bumpversion]
     steps:
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           distribution: 'liberica'
-          java-version: 17
+          java-version: '17'
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4
         with:
