--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -139,9 +139,8 @@ jobs:
       - run: |
 
           #! Build MacOS
-
-          ls /Users/runner/hostedtoolcache/Java_Liberica_jdk/17.0.3-7/
-          sudo cp -a /Users/runner/hostedtoolcache/Java_Liberica_jre/17.0.3-7/x64/. /Library/Java/JavaVirtualMachines/liberica-jre-17.jre
+          /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+          brew cask install java
 
           ls /Library/Java/JavaVirtualMachines/*
           mkdir macos-builds
