--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -170,6 +170,8 @@ jobs:
       - run: |
 
           #! Prepare Changelog
+          npm i extract-changelog-release -g
+          npm extract-changelog-release CHANGELOG.md > release.txt
           awk 's{ print ""; print}; $0~v {print; s=1; next}; s=0' RS= v="${{needs.bumpversion.outputs.version}}" CHANGELOG.txt > release.txt
           increment_version() {
             local delimiter=.
